change image in modal, add course , change background of projects, add personal pdf

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -19,7 +19,7 @@
     height: 40vh;
     border-radius: 10px;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.75);
-    background: url('https://astelus.com/wp-content/viajes/Lago-Moraine-Parque-Nacional-Banff-Alberta-Canada.jpg');
+    background: url(/public/assets/images/background-modal.jpg);
     background-size: cover;
     background-position: center;
     filter: drop-shadow(10px 10px 10px rgba(0, 0, 0, 0.75));
