--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Arvo:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
 
 .App {
 
@@ -83,6 +84,7 @@
 
 .main-layer {
   display: flex;
+  height: 88vh;
   flex-direction: column;
   overflow: hidden;
 }
@@ -184,18 +186,10 @@
   grid-template-columns: 30% 30% 30%;
   margin-bottom: 100px;
   padding: 30px;
+  margin-top: -2000px;
 
 }
 
-.project-page {
-  box-shadow: inset 0px 10px 10px 1px #3D404D;
-  border-radius: 10px;
-  background-image: url(codingImagea.png);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  opacity: 0.75;
-}
 
 .unit-chart {
   display: flex;
@@ -347,8 +341,10 @@
 }
 
 .paragraph {
+  font-family: 'Bangers', cursive;
   filter: drop-shadow(10px 10px 1px black);
   margin: 0 auto;
+  word-spacing: 20%;
   width: 50%;
   height: 300px;
   overflow: scroll;
@@ -356,7 +352,7 @@
 }
 
 .paragraph p {
-  font-size: 10px;
+  font-size: 20px;
   color: black;
   text-overflow: ellipsis;
 }
@@ -806,7 +802,7 @@
   .card-order {
     display: grid;
     grid-template-columns: 40% 40%;
-    margin-bottom: 100px;
+
     padding: 0px;
   }
 
@@ -837,7 +833,7 @@
   .experience {
     display: grid;
     grid-template-columns: 30% 30% 30%;
-    min-height: auto;
+    
   }
 
   .button-contact {
@@ -970,12 +966,13 @@
 
 .bottom123 {
   margin-top: 100px;
+  margin-bottom: -10px;
 }
 
 .simbologia img {
   height: 400px;
   width: 100%;
-  opacity: 0.5;
+  filter: contrast(70%);
   border-radius: 20px;
 
 }
